# reverse-marketplace

./: README.md
backend/: README.md  pyproject.toml
frontend/: LICENSE.txt  README.md  index.html  package-lock.json  package.json
frontend/src/: App.svelte
